--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile 'com.facebook.fresco:animated-gif:1.3.0'
     compile 'com.madgag:animated-gif-lib:1.2'
+    compile 'com.google.android.gms:play-services:10.2.1'
 }
